--- a/frontend/src/app/add-train/add-train.component.html
+++ b/frontend/src/app/add-train/add-train.component.html
@@ -6,7 +6,7 @@
               
                      <div class="form-group col-md-6">
                              <label for="inputName" style="margin-top: 30%;">Train Name</label>
-                             <input type="text" pattern="[01]?[0-9]|2[0-3]:[0-5][0-9]" class="form-control" id="inputName" placeholder="Enter Name" name="name" [(ngModel)]="TrainName" required>
+                             <input type="text" class="form-control" id="inputName" placeholder="Enter Name" name="name" [(ngModel)]="TrainName" required>
                              <div class="invalid-feedback">
                                     Please provide a name.
                                   </div>
