--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -6,7 +6,7 @@
         <h2>Login to continue</h2><br><br>
         <img src="../assets/images/trainicon.png" style="width: 100px; height: 100px; margin-left: 10%; margin-bottom: 40px;"><br>
         <label class="h4 form-control-label" for="input1">Email<abbr class="text-danger" title="This is required">*</abbr></label>
-        <input type="text" style="width:40%;margin-bottom: 5%;" class="form-control" id="Uname" (ngModel)="email" name="email" aria-describedby="emailHelp" placeholder="Enter Username"  required>
+        <input type="text" style="width:40%;margin-bottom: 5%;" class="form-control" id="Uname" (ngModel)="email" name="email" aria-describedby="emailHelp" placeholder="Enter Email"  required>
         
       </div>
       <div class="form-group">
