--- a/frontend/src/app/update-train-schedule/update-train-schedule.component.html
+++ b/frontend/src/app/update-train-schedule/update-train-schedule.component.html
@@ -45,37 +45,37 @@
              
                               <div class="form-group" style="margin-right:80%; width: 20%; margin-top: 20px;">
                                 <label>Monday</label>
-                                <input type="time" pattern="[01]?[0-9]|2[0-3]:[0-5][0-9]" name="monday" value="jio" class="form-control"  [(ngModel)]="trainS.Monday" >
+                                <input type="time"  name="monday" value="jio" class="form-control"  [(ngModel)]="trainS.Monday" >
                                 <div class="invalid-feedback">Please Select a Time</div>
                              </div>
                               <div class="form-group" style="margin-right:80%; width: 20%; margin-top: 20px;">
                                 <label>Tuesday</label>
-                                <input type="time" pattern="[01]?[0-9]|2[0-3]:[0-5][0-9]" name="tuesday" class="form-control" [(ngModel)]="trainS.Tuesday" >
+                                <input type="time" name="tuesday" class="form-control" [(ngModel)]="trainS.Tuesday" >
                                 <div class="invalid-feedback">Please Select a Time</div>
                              </div>
                              <div class="form-group" style="margin-right:80%; width: 20%; margin-top: 20px;">
                                 <label>Wednesday</label>
-                                <input type="time" pattern="[01]?[0-9]|2[0-3]:[0-5][0-9]" name="wednesday" class="form-control" [(ngModel)]="trainS.Wednesday" >
+                                <input type="time" name="wednesday" class="form-control" [(ngModel)]="trainS.Wednesday" >
                                 <div class="invalid-feedback">Please Select a Time</div>
                              </div>
                              <div class="form-group" style="margin-right:80%; width: 20%; margin-top: 20px;">
                                 <label>Thursday</label>
-                                <input type="time" pattern="[01]?[0-9]|2[0-3]:[0-5][0-9]" name="thursday" class="form-control" [(ngModel)]="trainS.Thursday" >
+                                <input type="time" name="thursday" class="form-control" [(ngModel)]="trainS.Thursday" >
                                 <div class="invalid-feedback">Please Select a Time</div>
                              </div>
                              <div class="form-group" style="margin-right:80%; width: 20%; margin-top: 20px;">
                                 <label>Friday</label>
-                                <input type="time" pattern="[01]?[0-9]|2[0-3]:[0-5][0-9]" name="friday" class="form-control" [(ngModel)]="trainS.Friday" >
+                                <input type="time" name="friday" class="form-control" [(ngModel)]="trainS.Friday" >
                                 <div class="invalid-feedback">Please Select a Time</div>
                              </div>
                              <div class="form-group" style="margin-right:80%; width: 20%; margin-top: 20px;">
                                 <label>Saturday</label>
-                                <input type="time" pattern="[01]?[0-9]|2[0-3]:[0-5][0-9]" name="saturday" class="form-control" [(ngModel)]="trainS.Saturday" >
+                                <input type="time" name="saturday" class="form-control" [(ngModel)]="trainS.Saturday" >
                                 <div class="invalid-feedback">Please Select a Time</div>
                              </div>
                              <div class="form-group" style="margin-right:80%; width: 20%; margin-top: 20px;">
                                 <label>Sunday</label>
-                                <input type="time" pattern="[01]?[0-9]|2[0-3]:[0-5][0-9]" name="sunday" class="form-control" [(ngModel)]="trainS.Sunday" >
+                                <input type="time" name="sunday" class="form-control" [(ngModel)]="trainS.Sunday" >
                                 <div class="invalid-feedback">Please Select a Time</div>
                              </div>
          
